# rcli

./: Cargo.toml  Readme.md  _typos.toml  deny.toml  output.json
src/: main.rs  opts.rs  process.rs
