[package]
name = 'rcli'
version = "0.1.0"
edition = "2024"
authors = ["codecow <zhenbodou@gmail.com>"]
description = "rcli project"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
